# xode-blockchain

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/tests/: zombienet-smoke-test.zndsl
.github/workflows/: ci.yml  pr-reminder.yml  test-zombienet.yml
client/: .env  README.md  package-lock.json  package.json
client/src/: index.ts
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/: README.md
pallets/staking/: Cargo.toml  README.md
pallets/staking/src/: benchmarking.rs  lib.rs  mock.rs  pallet_calls_tests.rs  tests.rs  tests_calls.rs  weight-template.hbs  weights.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/configs/xcm_config/: asset_matcher.rs  config.rs  mod.rs  origin_filters.rs  weight_trader.rs
zombienet/: README.md  launch-macos.sh  launch-ubuntu.sh  zombienet-launch.sh  zombienet-local.toml  zombienet.toml
