[package]
name = "pallet-xode-staking"
description = "FRAME pallet for defining custom runtime xode staking logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
], workspace = true }
scale-info = { features = [
	"derive",
], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
pallet-aura.workspace = true
pallet-collator-selection.workspace = true
pallet-session.workspace = true
pallet-balances.workspace = true
pallet-authorship.workspace = true
sp-staking.workspace = true
hex.workspace = true

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }

# Mock
sp-consensus-aura.workspace = true
pallet-timestamp.workspace = true
xcm.workspace = true
parachains-common.workspace = true
pallet-assets.workspace = true
pallet-asset-rate.workspace = true
pallet-indices.workspace = true
pallet-treasury.workspace = true
pallet-transaction-payment.workspace = true
smallvec = { workspace = true, default-features = true }
polkadot-runtime-common.workspace = true
sp-version.workspace = true
cumulus-primitives-core.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",

	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",

	"sp-runtime/std",

	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-consensus-aura/std",
	"xcm/std",
	"parachains-common/std",
	"pallet-assets/std",
	"pallet-asset-rate/std",
	"pallet-indices/std",
	"pallet-treasury/std",
	"pallet-transaction-payment/std",
	"polkadot-runtime-common/std",
	"sp-version/std",
	"cumulus-primitives-core/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
